<resources>
    <string name="app_name">Rise&amp;Shine</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Rise&amp;Shine</string>
    <string name="second_fragment_label">Add Alarm</string>
    <string name="next">Next</string>
    <string name="previous">Confirm</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plus_button">+</string>
    <string name="select_time">Select Time</string>
    <string name="test">test</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="no_alarms">No Alarms</string>
    <string name="timeNotSet">Alarm is not set</string>
    <string name="test_time">00:00 PM</string>
    <string name="edit">Edit</string>
    <string name="submit_button">Submit</string>

    <string name="memory_button">Memory Game</string>
    <string name="math_button">Math Quiz</string>
</resources>