<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/setTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:hint="@string/select_time"
        android:textColorHint="#646464"
        android:textSize="32sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_time" />

    <EditText
        android:id="@+id/add_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:hint="@string/alarm_name"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginTop="25dp"
        android:maxLength="7"/>

    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>