<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flipTimer="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setTime"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:hint="@string/timeNotSet"
        android:paddingBottom="100dp"
        android:layout_marginBottom="105dp"
        android:textAlignment="center"
        android:textColorHint="#646464"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="100dp"/>

    <com.asp.fliptimerviewlibrary.CountDownClock
        android:id="@+id/timerProgramCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        flipTimer:almostFinishedCallbackTimeInSeconds="5"
        flipTimer:animationDuration="850"
        flipTimer:countdownTickInterval="1000"
        flipTimer:digitBottomDrawable="@drawable/background_bottom"
        flipTimer:digitDividerColor="@color/black"
        flipTimer:digitPadding="1dp"
        flipTimer:digitTextColor="@color/white"
        flipTimer:digitTextSize="36sp"
        flipTimer:digitTopDrawable="@drawable/background_top"
        flipTimer:digitWidth="35dp"
        flipTimer:halfDigitHeight="40dp"
        flipTimer:resetSymbol="8"
        flipTimer:splitterPadding="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="100dp"
        android:paddingBottom="100dp"
        />
    <TextView
        android:id="@+id/EditTime"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="@string/test_time"
        android:textColor="@color/black"
        android:textSize="46sp"
        app:layout_constraintTop_toBottomOf="@+id/setTime"
        app:layout_constraintLeft_toLeftOf="@+id/setTime"
        app:layout_constraintRight_toRightOf="@+id/setTime"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/EditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/EditTime"
        app:layout_constraintLeft_toLeftOf="@+id/setTime"
        app:layout_constraintRight_toRightOf="@+id/setTime"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:maxLength="7"
        />
    <Button
        android:id="@+id/EditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/EditName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/edit"/>


</androidx.constraintlayout.widget.ConstraintLayout>